made the demo css only apply to the plugin elements so i can use it on the github page

--- a/src/css/demo.scss
+++ b/src/css/demo.scss
@@ -1,15 +1,16 @@
-body {
-	padding: 10px;
+.intl-number-input {
+	margin: 10px;
 	font: 80% Helvetica, Arial, "Lucida Grande", sans-serif;
-}
-.hide {
-	display: none;
-}
-* {
-	box-sizing: border-box;
-}
-input {
-	width: 250px;
-	font-family: inherit;
-	font-size: 100%;
+
+	.hide {
+		display: none;
+	}
+	* {
+		box-sizing: border-box;
+	}
+	input {
+		width: 250px;
+		font-family: inherit;
+		font-size: 100%;
+	}
 }
