--- a/src/css/intlTelInput.scss
+++ b/src/css/intlTelInput.scss
@@ -1,3 +1,7 @@
+$hoverColor: #eee;
+$greyText: #999;
+$greyBorder: #CCC;
+
 .intl-number-input {
 	position: relative;
 
@@ -10,11 +14,14 @@
 
 		.selected-flag {
 			padding: 6px 16px 6px 7px;
+
 			&:HOVER {
-				background-color: #EEE;
+				background-color: $hoverColor;
 			}
+
 			.flag {
 				position: relative;
+
 				&:after {
 					content: '▾';
 					position: absolute;
@@ -30,26 +37,31 @@
       padding: 0;
       margin: 0;
       z-index: 1;
+      overflow-y: scroll;
+
 			box-shadow: 1px 1px 4px rgba(0,0,0,0.2);
 			background-color: white;
-			border: 1px solid rgba(0,0,0,.3);
+			border: 1px solid $greyBorder;
+
 			position: absolute;
-			top: 29px;
+			top: 28px;
 			left: 0;
 			width: 330px;
 			height: 200px;
-			overflow-y: scroll;
+
 			.divider {
-				border-bottom: 1px solid #ddd;
+				border-bottom: 1px solid $greyBorder;
 			}
+
 			.country {
 				padding: 4px 10px;
 				font-size: 14px;
-				.grey {color: #999;}
+				.grey {color: $greyText;}
 				&:HOVER {
-					background-color: #eee;
+					background-color: $hoverColor;
 				}
 			}
+
 			.flag, .country-name {
 				display: inline-block;
 				margin-right: 6px;
