--- a/src/css/demo.scss
+++ b/src/css/demo.scss
@@ -1,12 +1,15 @@
 .intl-number-input {
   margin: 10px;
   font: 80% Helvetica, Arial, "Lucida Grande", sans-serif;
+  color: #444;
 
   input {
     width: 250px;
+    border: 1px solid #CCC;
+
+    // same font style, size and color as rest of site
     font-family: inherit;
     font-size: 100%;
-    border: 1px solid #CCC;
-    color: #666;
+    color: inherit;
   }
 }
