added sticky comment to flags16.scss and changed sass compilation style to compact

--- a/src/css/flags16.scss
+++ b/src/css/flags16.scss
@@ -1,4 +1,4 @@
-// originally from https://github.com/lafeber/world-flags-sprite
+/* originally from https://github.com/lafeber/world-flags-sprite */
 // modified to fix image path on third line of code, and remove a couple unwanted styles
 // modified to fix broken css classname: ._African_Union(OAS) on fifth line of code
 .f16 {
