mark the current country selection as active

--- a/src/css/intlTelInput.scss
+++ b/src/css/intlTelInput.scss
@@ -59,6 +59,8 @@ $greyBorder: #CCC;
 
       // the divider below the preferred countries
       .divider {
+        padding-bottom: 5px;
+        margin-bottom: 5px;
         border-bottom: 1px solid $greyBorder;
       }
 
@@ -70,6 +72,9 @@ $greyBorder: #CCC;
         &:hover {
           background-color: $hoverColor;
         }
+      }
+      .country.active {
+        background-color: $hoverColor;
       }
 
       .flag {
