--- a/src/css/demo.scss
+++ b/src/css/demo.scss
@@ -1,4 +1,4 @@
-.intl-number-input {
+.intl-tel-input {
   margin: 10px;
   font-size: 14px;
   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
