support inputs of any height

--- a/src/css/demo.scss
+++ b/src/css/demo.scss
@@ -6,6 +6,7 @@
 
   input {
     width: 250px;
+    height: 30px;
     border: 1px solid #CCC;
 
     // same font style, size and color as rest of site
