--- a/src/css/intlTelInput.scss
+++ b/src/css/intlTelInput.scss
@@ -1,6 +1,6 @@
 // rgba is needed for the selected flag hover state to blend in with
 // the border-highlighting some browsers give the input on focus
-$hoverColor: red;//rgba(0, 0, 0, 0.05);
+$hoverColor: rgba(0, 0, 0, 0.05);
 $greyText: #999;
 $greyBorder: #CCC;
 
