--- a/src/css/intlTelInput.scss
+++ b/src/css/intlTelInput.scss
@@ -153,6 +153,11 @@ $selectedFlagWidth: $flagWidth + (2 * $flagPadding) + $arrowWidth + $arrowPaddin
     input {
       position: relative;
       z-index: 0;
+
+      // the selected-flag gets it's height from the input - any margin here will
+      // break the alignment
+      margin-top: 0 !important;
+      margin-bottom: 0 !important;
     }
   }
 
